--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description:
 footer_text:
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🧑‍💻 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: a.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://adwaykanhere.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
