--- a/_config.yml
+++ b/_config.yml
@@ -305,6 +305,7 @@ filtered_bibtex_keywords:
     bibtex_show,
     blog,
     code,
+    eprint,
     google_scholar_id,
     html,
     inspirehep_id,
